@@ -1,6 +1,9 @@
 Changes from 2.5.4 to 2.5.5
 ---------------------------
 
+** Bug
+    * [FELIX-4882] - Correctly use Maven Plugin Tools Java 5 annotations instead of javadoc tags
+
 
 Changes from 2.5.3 to 2.5.4
 ---------------------------
